addons/ingress/haproxy/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-api
  namespace: default
  annotations:
    haproxy.org/path-rewrite: /api(/|$)(.*) /\2
    haproxy.org/server-ssl: 'true'
    haproxy.org/server-proto: h1
    haproxy.org/check: 'false'
spec:
  ingressClassName: haproxy
  rules:
  - host: example.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: kubernetes
            port:
              number: 443
