addons/ingress/haproxy/dashboard-ingress-legacy.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/secure-backends: 'true'
    kubernetes.io/ingress.class: haproxy
    ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  rules:
  - http:
      paths:
      - path: /kubernetes-dashboard
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
