addons/ingress/haproxy/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    haproxy.org/path-rewrite: /kubernetes-dashboard(/|$)(.*) /\2
    haproxy.org/server-ssl: 'true'
    haproxy.org/check: 'false'
spec:
  ingressClassName: haproxy
  rules:
  - host: example.com
    http:
      paths:
      - path: /kubernetes-dashboard
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
